--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 	<link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.5.1/leaflet.css" />
-	<link rel="stylesheet" href="static/app.css" />
+	<link rel="stylesheet" href="app/app.css" />
 	<script src="http://cdn.leafletjs.com/leaflet-0.5.1/leaflet.js"></script>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-	<script src="static/app.js"></script>
+	<script src="app/app.js"></script>
 	<title>The next is here</title>
 </head>
 <body>
