added more pois

--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
 	<option value="Playground">Playground</option>
 	<option value="Tabletennis">Tabletennis</option>
 	<option value="Postbox">Postbox</option>
+	<option value="ATM">ATM</option>
+	<option value="Taxi">cabstand</option>
+	<option value="Fuel">Gas station</option>
 	</select>
 
 is
