changed map and zoom

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 	<link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/leaflet/0.5.1/leaflet.css" />
 	<link rel="stylesheet" href="app/app.css" />
+	<link href='//fonts.googleapis.com/css?family=Roboto+Slab' rel='stylesheet' type='text/css'>
 	<script src="//cdnjs.cloudflare.com/ajax/libs/leaflet/0.5.1/leaflet.js"></script>
 	<script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
 	<script src="app/app.js"></script>
@@ -11,7 +12,7 @@
 </head>
 <body>
 <div id="inputarea">
-	The next 
+	THE NEXT<br> 
 
 
 	<select id="mydropdown" default="test">
@@ -22,8 +23,8 @@
 	<option value="Taxi">cabstand</option>
 	<option value="Fuel">Gas station</option>
 	</select>
-
-is
+<br>
+IS
 </div>
 
 <div id="map" style="height: 100%"></div>
