--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 	<link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/leaflet/0.5.1/leaflet.css" />
 	<link rel="stylesheet" href="app/app.css" />
-	<link href='//fonts.googleapis.com/css?family=Roboto+Slab' rel='stylesheet' type='text/css'>
+	<link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300' rel='stylesheet' type='text/css'>
 	<script src="//cdnjs.cloudflare.com/ajax/libs/leaflet/0.5.1/leaflet.js"></script>
 	<script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
 	<script src="app/app.js"></script>
@@ -12,7 +12,8 @@
 </head>
 <body>
 <div id="inputarea">
-	THE NEXT<br> 
+	THE<br>
+	NEXT<br> 
 
 
 	<select id="mydropdown" default="test">
