changed mobile behaviour

--- a/index_mobile.html
+++ b/index_mobile.html
@@ -2,12 +2,12 @@
 <html>
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+	<meta name="viewport" content="initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
 	<meta name="apple-mobile-web-app-capable" content="yes" />
 	<meta name="apple-mobile-web-app-status-bar-style" content="white" />
 	
 	<title>TheNextIs.com - find your place</title>
-	<script src="app/detectmobilebrowser.js"></script>
-	
+
 	<link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/leaflet/0.6.4/leaflet.css" />
 	<script src="//cdnjs.cloudflare.com/ajax/libs/leaflet/0.6.4/leaflet.js"></script>
 	<link rel="stylesheet" href="app/app.css" />
