--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
 	<meta property="og:title" content="TheNextIs.com - find your place" />
 	<meta property="og:type" content="video.movie" />
 	<meta property="og:url" content="http://thenextis.com" />
+	<meta name="description" content="TheNextIs.com helps you find places around you like ATM, telephone, mailbox and many more. Your points of interests (POI) search engine." />
 </head>
 <body>
 <div id="inputarea">
@@ -57,6 +58,7 @@
 	<option value="Playground">Playground</option>
 	<option value="Tabletennis">Tabletennis</option>
 	<option value="Postbox">Postbox</option>
+	<option value="Pharmacy">Pharmacy</option>
 	<option value="ATM">ATM</option>
 	<option value="Taxi">cabstand</option>
 	<option value="Fuel">Gas station</option>
@@ -67,7 +69,15 @@
 
 <p>IS</p>
 <span id="loading" hidden="true"><i class="icon-spinner icon-spin icon-large"></i> searching for you...</span>
+<span id="redo"><a href=""><i class="icon-refresh icon-large"></i> redo search in current map</a></span>
+<p>
+<span id="social"><a href="https://plus.google.com/107689928685837922404/" target="_blank"><i class="icon-google-plus-sign"></i></a><a href="https://www.facebook.com/Thenextis" target="_blank"><i class="icon-facebook-sign"></i></a><a href=""><i class="icon-twitter-sign"></i></a></span>
+<div class="fb-like" data-href="https://www.facebook.com/thenextis" data-width="50" data-colorscheme="dark" data-layout="button_count" data-show-faces="true" data-send="false"></div>
+</p>
+<p><span id="add"><a href="http://www.openstreetmap.org/edit" target="_blank" title="Miss something? Add in OSM"><i class="icon-wrench icon-large"></i></a></span>
+</p>
 </div>
+
 
 <div id="map" style="height: 100%"></div>
 
@@ -84,5 +94,13 @@
   </div>
 </div>
 <a href="https://github.com/homtec/thenextis/"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png" alt="Fork me on GitHub"></a>
+<div id="fb-root"></div>
+<script>(function(d, s, id) {
+  var js, fjs = d.getElementsByTagName(s)[0];
+  if (d.getElementById(id)) return;
+  js = d.createElement(s); js.id = id;
+  js.src = "//connect.facebook.net/en_US/all.js#xfbml=1";
+  fjs.parentNode.insertBefore(js, fjs);
+}(document, 'script', 'facebook-jssdk'));</script>
 </body>
 </html>
