--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 	
 	<title>TheNextIs.com - find your place</title>
 	<script src="app/detectmobilebrowser.js"></script>
+	<script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js"></script>
 	
 	<link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/leaflet/0.6.4/leaflet.css" />
 	<script src="//cdnjs.cloudflare.com/ajax/libs/leaflet/0.6.4/leaflet.js"></script>
@@ -26,7 +27,6 @@
 	<script src="//netdna.bootstrapcdn.com/bootstrap/3.0.0/js/bootstrap.min.js"></script>
 
 
-	<script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js"></script>
 	<link href="//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css" rel="stylesheet">
 
 	<script type="text/javascript">
@@ -68,8 +68,8 @@
 	</select>
 
 <p>IS</p>
-<span id="loading" hidden="true"><i class="icon-spinner icon-spin icon-large"></i> searching for you...</span>
-<span id="redo"><a href=""><i class="icon-refresh icon-large"></i> redo search in current map</a></span>
+<span id="loading" hidden="true"><i class="icon-spinner icon-spin icon-large"></i> searching for you...</span><br>
+<span id="redo"><a id="redo_link" href="#"><i class="icon-refresh icon-large"></i> redo search in current map</a></span>
 <p>
 <span id="social"><a href="https://plus.google.com/107689928685837922404/" target="_blank"><i class="icon-google-plus-sign"></i></a><a href="https://www.facebook.com/Thenextis" target="_blank"><i class="icon-facebook-sign"></i></a><a href=""><i class="icon-twitter-sign"></i></a></span>
 <div class="fb-like" data-href="https://www.facebook.com/thenextis" data-width="50" data-colorscheme="dark" data-layout="button_count" data-show-faces="true" data-send="false"></div>
