--- a/index.html
+++ b/index.html
@@ -55,16 +55,17 @@
 
 
 	<select id="mydropdown" default="test">
+	<option value="" disabled selected>choose...</option>
+	<option value="Postbox">Postbox</option>
 	<option value="Playground">Playground</option>
 	<option value="Tabletennis">Tabletennis</option>
-	<option value="Postbox">Postbox</option>
 	<option value="Pharmacy">Pharmacy</option>
 	<option value="ATM">ATM</option>
 	<option value="Taxi">cabstand</option>
 	<option value="Fuel">Gas station</option>
 	<option value="Telephone">Telephone</option>
 	<option value="Water">Drinking water</option>
-	<option value="Charging">EV charging station</option>
+	<option value="Charging">EV charging</option>
 	</select>
 
 <p>IS</p>
