Add option to select bus stations.

--- a/index.html
+++ b/index.html
@@ -61,11 +61,12 @@
 	<option value="Tabletennis">Tabletennis</option>
 	<option value="Pharmacy">Pharmacy</option>
 	<option value="ATM">ATM</option>
-	<option value="Taxi">cabstand</option>
+	<option value="Taxi">Cabstand</option>
 	<option value="Fuel">Gas station</option>
 	<option value="Telephone">Telephone</option>
 	<option value="Water">Drinking water</option>
 	<option value="Charging">EV charging</option>
+  <option value="Bus station">Bus station</option>
 	</select>
 
 <p>IS</p>
