added "locate me" button

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 	<script src="//netdna.bootstrapcdn.com/bootstrap/3.0.0/js/bootstrap.min.js"></script>
 
 
-	<link href="//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css" rel="stylesheet">
+	<link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
 
 	<script type="text/javascript">
 
@@ -70,13 +70,15 @@
 	</select>
 
 <p>IS</p>
-<span id="loading" hidden="true"><i class="icon-spinner icon-spin icon-large"></i> searching for you...</span><br>
-<span id="redo"><a id="redo_link" href="#"><i class="icon-refresh icon-large"></i> redo search in current map</a></span>
-<p>
+<span id="loading" hidden="true"><i class="fa fa-spinner fa-spin fa-large"></i> searching for you...</span><br/>
+<span id="redo"><a id="redo_link" href="#"><i class="fa fa-refresh icon-large"></i> redo search in current map</a></span>
+<br/>
+<span id="locateMe"><a id="locateMe_link" href="#"><i class="fa fa-location-arrow"></i> locate me</a></span>
+    <p>
 <span id="social"><a href="https://plus.google.com/107689928685837922404/" target="_blank"><i class="icon-google-plus-sign"></i></a><a href="https://www.facebook.com/Thenextis" target="_blank"><i class="icon-facebook-sign"></i></a><a href="https://twitter.com/thenextis"><i class="icon-twitter-sign"></i></a></span>
 <div class="fb-like" data-href="https://www.facebook.com/thenextis" data-width="50" data-colorscheme="dark" data-layout="button_count" data-show-faces="true" data-send="false"></div>
 </p>
-<p><span id="add"><a href="http://www.openstreetmap.org/edit" target="_blank" title="Miss something? Add in OSM"><i class="icon-wrench icon-large"></i></a></span>
+<p><span id="add"><a href="http://www.openstreetmap.org/edit" target="_blank" title="Miss something? Add in OSM"><i class="fa fa-wrench icon-large"></i></a></span>
 </p>
 </div>
 
