--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 <br/>
 <span id="locateMe"><a id="locateMe_link" href="#"><i class="fa fa-location-arrow"></i> locate me</a></span>
     <p>
-<span id="social"><a href="https://plus.google.com/107689928685837922404/" target="_blank"><i class="icon-google-plus-sign"></i></a><a href="https://www.facebook.com/Thenextis" target="_blank"><i class="icon-facebook-sign"></i></a><a href="https://twitter.com/thenextis"><i class="icon-twitter-sign"></i></a></span>
+<span id="social"><a href="https://plus.google.com/107689928685837922404/" target="_blank"><i class=" fa fa-google-plus"></i></a><a href="https://www.facebook.com/Thenextis" target="_blank"><i class="icon-facebook-sign"></i></a><a href="https://twitter.com/thenextis"><i class="fa fa-twitter"></i></a></span>
 <div class="fb-like" data-href="https://www.facebook.com/thenextis" data-width="50" data-colorscheme="dark" data-layout="button_count" data-show-faces="true" data-send="false"></div>
 </p>
 <p><span id="add"><a id="editOSM_link" href="#" "Miss something? Add in OSM"><i class="fa fa-wrench icon-large"></i></a></span>
