--- a/index_mobile.html
+++ b/index_mobile.html
@@ -11,7 +11,7 @@
 
 	<link rel="stylesheet" href="//cdn.leafletjs.com/leaflet-0.7.1/leaflet.css" />
 	<script src="//cdn.leafletjs.com/leaflet-0.7.1/leaflet.js"></script>
-	<link rel="stylesheet" href="app/app.css" />
+	<link rel="stylesheet" href="app/app_mobile.css" />
 	<script src="app/app.js"></script>
 
 	<link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300' rel='stylesheet' type='text/css'>
@@ -49,8 +49,7 @@
 </head>
 <body>
 <div id="inputarea">
-	<p>THE</p>
-	<p>NEXT</p>
+	THE NEXT
 
 
 	<select id="mydropdown" default="test">
@@ -68,7 +67,7 @@
         <option value="Bus station">Bus station</option>
 	</select>
 
-<p>IS</p>
+IS<br>
 <span id="loading" hidden="true"><i class="icon-spinner icon-spin icon-large"></i> searching for you...</span>
 </div>
 
