--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 	<p>THE</p>
 	<p>NEXT</p>
 
-	<input id="mydropdown" class="ui-autocomplete-input" autocomplete="off" placeholder="e.g. telephone, postbox">
+	<input id="mydropdown" class="ui-autocomplete-input" autocomplete="off" placeholder="e.g. telephone, postbox" autofocus>
     <input id="tag_name" hidden="true">
 
 <p>IS</p>
