fixed mobile map style

--- a/index_mobile.html
+++ b/index_mobile.html
@@ -58,7 +58,7 @@ IS<br>
 <span id="loading" hidden="true"><i class="icon-spinner icon-spin icon-large"></i> searching for you...</span>
 </div>
 
-<div id="map" style="height: 100%"></div>
+<div id="map"></div>
 
 <div id="modal_no_pois" class="modal hide fade">
   <div class="modal-header">
