--- a/index_mobile.html
+++ b/index_mobile.html
@@ -27,7 +27,7 @@
 	<script src="//netdna.bootstrapcdn.com/bootstrap/3.0.0/js/bootstrap.min.js"></script>
 
 
-	<link href="//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css" rel="stylesheet">
+	<link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
 
 
 	<meta property="og:title" content="TheNextIs.com - find your place" />
@@ -59,6 +59,9 @@ IS<br>
 </div>
 
 <div id="map"></div>
+
+<div id="reload-button" class="buttons"><i class="fa fa-refresh icon-large"></i></div>
+<div id="locateMe-button" class="buttons"><i class="fa fa-location-arrow"></i></div>
 
 <div id="modal_no_pois" class="modal hide fade">
   <div class="modal-header">
