added loading layer

--- a/index_mobile.html
+++ b/index_mobile.html
@@ -55,12 +55,17 @@
 	</select>
 
 IS<br>
-<span id="loading" hidden="true"><i class="icon-spinner icon-spin icon-large"></i> searching for you...</span>
 </div>
 
-<div id="map"></div>
+<div id="loading"><i class="fa fa-spinner fa-spin fa-large"></i> searching for you...</div>
+
+    <div id="map"></div>
 <div id="reload-button" class="buttons"><i class="fa fa-refresh icon-large"></i></div>
 <div id="locateMe-button" class="buttons"><i class="fa fa-location-arrow"></i></div>
+<div id="search-button" class="buttons"><i class="fa fa-search"></i></div>
+    
+
+
 
 <div id="modal_no_pois" class="modal hide fade">
   <div class="modal-header">
