added cafe for mobile page

--- a/index_mobile.html
+++ b/index_mobile.html
@@ -42,6 +42,7 @@
 	<select id="mydropdown" default="test">
 	<option value="" disabled selected>choose...</option>
 	<option value="Postbox">Postbox</option>
+    <option value="Cafe">Café</option>
 	<option value="Playground">Playground</option>
 	<option value="Tabletennis">Tabletennis</option>
 	<option value="Pharmacy">Pharmacy</option>
