--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
 	<meta name="apple-mobile-web-app-status-bar-style" content="white" />
 	
 	<title>TheNextIs.com - find your place</title>
+    <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="/favicon.ico" type="image/x-icon">
+    
 	<script src="app/detectmobilebrowser.js"></script>
 	<script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
 	<script src="app/jquery.autocomplete.min.js"></script>
