--- a/index.html
+++ b/index.html
@@ -33,7 +33,9 @@
 	<link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
 
 	<meta property="og:title" content="TheNextIs.com - find your place" />
-	<meta property="og:type" content="video.movie" />
+    <meta property="og:image" content="http://thenextis.com/og_icon.png"/>
+
+	<meta property="og:type" content="website" />
 	<meta property="og:url" content="http://thenextis.com" />
 	<meta name="description" content="TheNextIs.com helps you find places around you like ATM, telephone, mailbox and many more. Your points of interests (POI) search engine." />
 </head>
