--- a/index_mobile.html
+++ b/index_mobile.html
@@ -31,7 +31,8 @@
 
 
 	<meta property="og:title" content="TheNextIs.com - find your place" />
-	<meta property="og:type" content="video.movie" />
+    <meta property="og:image" content="http://thenextis.com/og_icon.png"/>
+	<meta property="og:type" content="website" />
 	<meta property="og:url" content="http://thenextis.com" />
 </head>
 <body>
