load data from file and add to mobile version

--- a/index_mobile.html
+++ b/index_mobile.html
@@ -41,7 +41,7 @@
 
 
 	<select id="mydropdown" default="test">
-	<option value="" disabled selected>choose...</option>
+<!--	<option value="" disabled selected>choose...</option>
 	<option value="Postbox">Postbox</option>
     <option value="Cafe">Café</option>
 	<option value="Playground">Playground</option>
@@ -53,7 +53,7 @@
 	<option value="Telephone">Telephone</option>
 	<option value="Water">Drinking water</option>
 	<option value="Charging">EV charging</option>
-        <option value="Bus station">Bus station</option>
+    <option value="Bus station">Bus station</option> -->
 	</select>
 
 IS<br>
