--- a/index_mobile.html
+++ b/index_mobile.html
@@ -37,6 +37,7 @@
 </head>
 <body>
 <div id="inputarea">
+  <span id="inputarea-content">
 	THE NEXT
 
 
@@ -56,7 +57,7 @@
     <option value="Bus station">Bus station</option> -->
 	</select>
 
-IS<br>
+  IS</span>
 </div>
 
 <div id="loading"><i class="fa fa-spinner fa-spin fa-large"></i> searching for you...</div>
