Add cache manifest for faster page loading

--- a/index.html
+++ b/index.html
@@ -1,16 +1,16 @@
 <!DOCTYPE HTML>
-<html>
+<html manifest="cache.appcache">
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 	<meta name="apple-mobile-web-app-capable" content="yes" />
 	<meta name="apple-mobile-web-app-status-bar-style" content="white" />
-	
+
 	<title>TheNextIs.com - find your place</title>
-    
+
 	<script src="app/detectmobilebrowser.js"></script>
 	<script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
 	<script src="app/jquery.autocomplete.min.js"></script>
-	
+
 	<link rel="stylesheet" href="//cdn.leafletjs.com/leaflet-0.7.2/leaflet.css" />
 	<script src="//cdn.leafletjs.com/leaflet-0.7.2/leaflet.js"></script>
 	<link rel="stylesheet" href="app/app.css" />
@@ -100,6 +100,6 @@
   })();
 </script>
 <!-- End Piwik Code -->
-    
+
 </body>
 </html>
