--- a/index_mobile.html
+++ b/index_mobile.html
@@ -1,5 +1,5 @@
 <!DOCTYPE HTML>
-<html>
+<html manifest="cache.appcache">
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 	<meta name="viewport" content="initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
