--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 	<script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
 	<script src="app/jquery.autocomplete.min.js"></script>
 
-	<link rel="stylesheet" href="//cdn.leafletjs.com/leaflet-0.7.2/leaflet.css" />
-	<script src="//cdn.leafletjs.com/leaflet-0.7.2/leaflet.js"></script>
+	<link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/leaflet/0.7.3/leaflet.css" />
+	<script src="//cdnjs.cloudflare.com/ajax/libs/leaflet/0.7.3/leaflet.js"></script>
 	<link rel="stylesheet" href="app/app.css" />
 	<script src="app/app.js"></script>
 	<script src="app/autocomplete.js"></script>
