--- a/index_mobile.html
+++ b/index_mobile.html
@@ -9,8 +9,8 @@
 	<title>TheNextIs.com - find your place</title>
 	<script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
 
-	<link rel="stylesheet" href="//cdn.leafletjs.com/leaflet-0.7.2/leaflet.css" />
-	<script src="//cdn.leafletjs.com/leaflet-0.7.2/leaflet.js"></script>
+	<link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/leaflet/0.7.3/leaflet.css" />
+	<script src="//cdnjs.cloudflare.com/ajax/libs/leaflet/0.7.3/leaflet.js"></script>
 	<link rel="stylesheet" href="app/app_mobile.css" />
 	<script src="app/app.js"></script>
 
