--- a/index.html
+++ b/index.html
@@ -71,7 +71,11 @@
     <a href="#" class="btn btn-primary">Close</a>
   </div>
 </div>
+
+<!-- temporary disable gituub ribbon
 <a href="https://github.com/homtec/thenextis/"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png" alt="Fork me on GitHub"></a>
+-->
+
 <div id="fb-root"></div>
 <script>(function(d, s, id) {
   var js, fjs = d.getElementsByTagName(s)[0];
