update fb button

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 <span id="locateMe-button"><i class="fa fa-location-arrow"></i> locate me</span>
     <p>
 <span id="social"><a href="https://plus.google.com/107689928685837922404/" target="_blank"><i class=" fa fa-google-plus"></i></a><a href="https://www.facebook.com/Thenextis" target="_blank"><i class="icon-facebook-sign"></i></a><a href="https://twitter.com/thenextis"><i class="fa fa-twitter "></i></a></span>
-<div class="fb-like" data-href="https://www.facebook.com/thenextis" data-width="50" data-colorscheme="dark" data-layout="button_count" data-show-faces="true" data-send="false"></div>
+<div class="fb-like" data-href="http://facebook.com/thenextis" data-layout="button_count" data-action="like" data-show-faces="true" data-share="true"></div>
 </p>
 <p><span id="editOSM-button"><i class="fa fa-wrench icon-large"></i> Miss something? Add in OSM!</span>
 </p>
@@ -81,7 +81,7 @@
   var js, fjs = d.getElementsByTagName(s)[0];
   if (d.getElementById(id)) return;
   js = d.createElement(s); js.id = id;
-  js.src = "//connect.facebook.net/en_US/all.js#xfbml=1";
+  js.src = "//connect.facebook.net/en_US/sdk.js#xfbml=1&version=v2.0";
   fjs.parentNode.insertBefore(js, fjs);
 }(document, 'script', 'facebook-jssdk'));</script>
 
