* added info button * adjust z-layer to fix overlay issue * removed unused code

--- a/index_mobile.html
+++ b/index_mobile.html
@@ -37,30 +37,34 @@
 
 	<select id="mydropdown" default="test">
 		<option value="" disabled selected>choose...</option>
-<!--		<option value="Postbox">Postbox</option>
-    <option value="Cafe">Café</option>
-	<option value="Playground">Playground</option>
-	<option value="Tabletennis">Tabletennis</option>
-	<option value="Pharmacy">Pharmacy</option>
-	<option value="ATM">ATM</option>
-	<option value="Taxi">Cabstand</option>
-	<option value="Fuel">Gas station</option>
-	<option value="Telephone">Telephone</option>
-	<option value="Water">Drinking water</option>
-	<option value="Charging">EV charging</option>
-    <option value="Bus station">Bus station</option> -->
 	</select>
 
   IS</span>
 </div>
 
 <div id="loading"><i class="fa fa-spinner fa-spin fa-large"></i> searching for you...</div>
+<div id="info_overlay">
+	<h1>About this project</h1>
 
-    <div id="map"></div>
+	<a href="https://github.com/homtec/thenextis/" target="_blank">Contribute on github</a>
+	<br><br>
+	<a href="https://twitter.com/thenextis" target="_blank"><i class="fa fa-twitter "></i></a>
+	<a href="https://www.facebook.com/Thenextis" target="_blank"><i class="fa fa-facebook-square"></i></a>
+	<a href="https://plus.google.com/107689928685837922404/" target="_blank"><i class=" fa fa-google-plus"></i></a>
+
+	<div class="fb-like" data-href="http://facebook.com/thenextis" data-layout="button_count" data-action="like" data-show-faces="true" data-share="true"></div>
+	<br>
+	<i class="fa fa-wrench icon-small"></i> Miss something? Add in OSM!
+
+
+</div>
+
+
+<div id="map"></div>
 <div id="reload-button" class="buttons"><i class="fa fa-refresh icon-large"></i></div>
 <div id="locateMe-button" class="buttons"><i class="fa fa-location-arrow"></i></div>
+<div id="info-button" class="buttons"><i class="fa fa-info"></i></div>
 <div id="search-button" class="buttons"><i class="fa fa-search"></i></div>
-
 
 
 
