--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE HTML>
 <html manifest="cache.appcache">
+<!-- <html> -->
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+	<meta name="viewport" content="initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
 	<meta name="apple-mobile-web-app-capable" content="yes" />
 	<meta name="apple-mobile-web-app-status-bar-style" content="white" />
 
 	<title>TheNextIs.com - find your place</title>
-
-	<script src="app/detectmobilebrowser.js"></script>
 
 	<link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/leaflet/0.7.3/leaflet.css" />
 	<link rel="stylesheet" href="app/app.css" />
@@ -22,42 +22,52 @@
 	<link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap-theme.min.css">
 
 	<!-- Latest compiled and minified JavaScript -->
-
-
 	<link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
 
 
-
 	<meta property="og:title" content="TheNextIs.com - find your place" />
-    <meta property="og:image" content="http://thenextis.com/og_icon.png"/>
-
+  <meta property="og:image" content="http://thenextis.com/og_icon.png"/>
 	<meta property="og:type" content="website" />
 	<meta property="og:url" content="http://thenextis.com" />
-	<meta name="description" content="TheNextIs.com helps you find places around you like ATM, telephone, mailbox and many more. Your points of interests (POI) search engine." />
 </head>
 <body>
 <div id="inputarea">
-	<p>THE</p>
-	<p>NEXT</p>
+  <span id="inputarea-content">
+	THE NEXT
 
-	<input id="mydropdown" class="ui-autocomplete-input" autocomplete="off" placeholder="e.g. telephone, postbox" autofocus>
-    <input id="tag_name" hidden="true">
 
-<p>IS</p>
-<span id="loading" hidden="true"><i class="fa fa-spinner fa-spin fa-large"></i> searching for you...</span><br/>
-<span id="reload-button"><i class="fa fa-refresh icon-large"></i> redo search in current map</span>
-<br/>
-<span id="locateMe-button"><i class="fa fa-location-arrow"></i> locate me</span>
-    <p>
-<span id="social"><a href="https://plus.google.com/107689928685837922404/" target="_blank"><i class=" fa fa-google-plus"></i></a><a href="https://www.facebook.com/Thenextis" target="_blank"><i class="icon-facebook-sign"></i></a><a href="https://twitter.com/thenextis"><i class="fa fa-twitter "></i></a></span>
-<div class="fb-like" data-href="http://facebook.com/thenextis" data-layout="button_count" data-action="like" data-show-faces="true" data-share="true"></div>
-</p>
-<p><span id="editOSM-button"><i class="fa fa-wrench icon-large"></i> Miss something? Add in OSM!</span>
-</p>
+	<select id="mydropdown" default="test">
+		<option value="" disabled selected>choose...</option>
+	</select>
+
+  IS</span>
+</div>
+
+<div id="loading"><i class="fa fa-spinner fa-spin fa-large"></i> searching for you...</div>
+<div id="info_overlay">
+	<h1>About this project</h1>
+
+	<a href="https://github.com/homtec/thenextis/" target="_blank">Contribute on github</a>
+	<br><br>
+	<a href="https://twitter.com/thenextis" target="_blank"><i class="fa fa-twitter "></i></a>
+	<a href="https://www.facebook.com/Thenextis" target="_blank"><i class="fa fa-facebook-square"></i></a>
+	<a href="https://plus.google.com/107689928685837922404/" target="_blank"><i class=" fa fa-google-plus"></i></a>
+
+	<div class="fb-like" data-href="http://facebook.com/thenextis" data-layout="button_count" data-action="like" data-show-faces="true" data-share="true"></div>
+	<br>
+	<span id="editOSM-button"><i class="fa fa-wrench icon-small"></i> Miss something? Add in OSM!</span>
+
+
 </div>
 
 
-<div id="map" style="height: 100%"></div>
+<div id="map"></div>
+<div id="reload-button" class="buttons"><i class="fa fa-refresh icon-large"></i></div>
+<div id="locateMe-button" class="buttons"><i class="fa fa-location-arrow"></i></div>
+<div id="info-button" class="buttons"><i class="fa fa-info"></i></div>
+<div id="search-button" class="buttons"><i class="fa fa-search"></i></div>
+
+
 
 <div id="modal_no_pois" class="modal hide fade">
   <div class="modal-header">
@@ -72,28 +82,16 @@
   </div>
 </div>
 
-<!-- temporary disable gituub ribbon
-<a href="https://github.com/homtec/thenextis/"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png" alt="Fork me on GitHub"></a>
--->
-
-<div id="fb-root"></div>
-<script>(function(d, s, id) {
-  var js, fjs = d.getElementsByTagName(s)[0];
-  if (d.getElementById(id)) return;
-  js = d.createElement(s); js.id = id;
-  js.src = "//connect.facebook.net/en_US/sdk.js#xfbml=1&version=v2.0";
-  fjs.parentNode.insertBefore(js, fjs);
-}(document, 'script', 'facebook-jssdk'));</script>
 
 <!--  Analytics -->
 <script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+	(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+	(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+	m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+	})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
-  ga('create', 'UA-41786342-1', 'auto');
-  ga('send', 'pageview');
+	ga('create', 'UA-41786342-1', 'auto');
+	ga('send', 'pageview');
 
 </script>
 <!-- End Analytics Code -->
@@ -102,8 +100,6 @@
 <script src="//netdna.bootstrapcdn.com/bootstrap/3.0.0/js/bootstrap.min.js"></script>
 <script src="//cdnjs.cloudflare.com/ajax/libs/leaflet/0.7.3/leaflet.js"></script>
 <script src="app/app.js"></script>
-<script src="app/jquery.autocomplete.min.js"></script>
-<script src="app/autocomplete.js"></script>
 
 </body>
 </html>
