Add banner for online/offline events, add helper functions, and bind helper functions to tilelayer events for map, ajax events for poi search, and inbuilt navigator.onLine online/offline events

--- a/index.html
+++ b/index.html
@@ -42,7 +42,8 @@
 
   IS</span>
 </div>
-
+<div id="online-offline-pane">
+</div>
 <div id="loading"><i class="fa fa-spinner fa-spin fa-large"></i> searching for you...</div>
 <div id="info_overlay">
 	<h1>About this project</h1>
