--- a/index_mobile.html
+++ b/index_mobile.html
@@ -42,7 +42,8 @@
 
   IS</span>
 </div>
-
+<div id="online-offline-pane">
+</div>
 <div id="loading"><i class="fa fa-spinner fa-spin fa-large"></i> searching for you...</div>
 <div id="info_overlay">
 	<h1>About this project</h1>
