--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	<link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/leaflet/0.7.3/leaflet.css" />
 	<link rel="stylesheet" href="app/app.css" />
 
-	<link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300' rel='stylesheet' type='text/css'>
+	<link href='https://fonts.googleapis.com/css?family=Open+Sans:400,300' rel='stylesheet' type='text/css'>
 
 
 	<!-- Latest compiled and minified CSS -->
@@ -26,9 +26,9 @@
 
 
 	<meta property="og:title" content="TheNextIs.com - find your place" />
-  <meta property="og:image" content="http://thenextis.com/og_icon.png"/>
+	<meta property="og:image" content="https://thenextis.com/og_icon.png"/>
 	<meta property="og:type" content="website" />
-	<meta property="og:url" content="http://thenextis.com" />
+	<meta property="og:url" content="https://thenextis.com" />
 </head>
 <body>
 <div id="inputarea">
@@ -53,7 +53,7 @@
 	<a href="https://www.facebook.com/Thenextis" target="_blank"><i class="fa fa-facebook-square"></i></a>
 	<a href="https://plus.google.com/107689928685837922404/" target="_blank"><i class=" fa fa-google-plus"></i></a>
 
-	<div class="fb-like" data-href="http://facebook.com/thenextis" data-layout="button_count" data-action="like" data-show-faces="true" data-share="true"></div>
+	<div class="fb-like" data-href="https://facebook.com/thenextis" data-layout="button_count" data-action="like" data-show-faces="true" data-share="true"></div>
 	<br>
 	<span id="editOSM-button"><i class="fa fa-wrench icon-small"></i> Miss something? Add in OSM!</span>
 
