--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE HTML>
-<html manifest="cache.appcache">
+<html>
 <!-- <html> -->
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
