--- a/index.html
+++ b/index.html
@@ -80,18 +80,7 @@
 </div>
 
 
-<!--  Analytics -->
-<script>
-	(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-	(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-	m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-	})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
-	ga('create', 'UA-41786342-1', 'auto');
-	ga('send', 'pageview');
-
-</script>
-<!-- End Analytics Code -->
 
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
 <script src="//netdna.bootstrapcdn.com/bootstrap/3.0.0/js/bootstrap.min.js"></script>
@@ -104,6 +93,6 @@
 <script src="app/app.js"></script>
 <link rel="stylesheet" href="app/app.css" />
 
-
+<!-- Cloudflare Web Analytics --><script defer src='https://static.cloudflareinsights.com/beacon.min.js' data-cf-beacon='{"token": "963e96e7b48244dfb08331900394dc80"}'></script><!-- End Cloudflare Web Analytics -->
 </body>
 </html>
